[project]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Apache License V 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"GitHub" = "https://github.com/tidal-music/tidal-algorithmic-mixes"

[tool.poetry]
name = "tidal_algorithmic_mixes"
version = "0.1.6"
description = "common transformers used by the tidal personalization team."
authors = [
    "Loay <loay@squareup.com>",
    "Tao <tma@squareup.com>",
    "Thomas <talmenningen@squareup.com>",
    "Yuhua <yuhua@squareup.com>"
]

license = "Apache License V 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.13"
pyspark = ">=3.5.0,<=3.6.0"
numpy = "^1.23.0"
pandas = "^1.4.2"
tidal-per-transformers = ">=0.3.1"
torch = "2.2.1"
mlflow = ">=2.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.2"
setuptools = "80.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
