[tool.poetry]
name = "tidal_algorithmic_mixes"
version = "0.1.6"
description = "Algorithic mixes developed by the tidal personalization team."
authors = [
    "Loay <loay@squareup.com>",
    "Tao <tma@squareup.com>",
    "Thomas <talmenningen@squareup.com>"
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/tidal-music/tidal-algorithmic-mixes"

[tool.poetry.dependencies]
python = ">=3.10.13"
pyspark = ">=3.5.0,<=3.6.0"
numpy = "^1.23.0"
pandas = "^1.4.2"
tidal-per-transformers = ">=0.3.1"
torch = "2.2.1"
mlflow = ">=2.9.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.2"
setuptools = "80.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
