[tool.poetry]
name = "tidal_algorithmic_mixes"
version = "0.2.0"
description = "Algorithic mixes developed by the TIDAL personalization team."
authors = [
    "Loay <loay@squareup.com>",
    "Tao <tma@squareup.com>",
    "Thomas <talmenningen@squareup.com>"
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/tidal-music/tidal-algorithmic-mixes"

[tool.poetry.dependencies]
python = ">=3.12.0"
pyspark = ">=4.0.0"
numpy = "^2.1.3"
pandas = "^2.3.2"
tidal-per-transformers = ">=0.5.0"
torch = "2.2.1"
mlflow-skinny = ">=3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.2"
setuptools = "80.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
